--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1.index-page {
 
 table {
     /* position: absolute; */
-    background-color: blue;
+    background-color: #0000cc;
 }
 
 @keyframes gravity0 {
